--- a/seller_app/assets/seller/package.json
+++ b/seller_app/assets/seller/package.json
@@ -7,6 +7,7 @@
   "license": "BSD",
   "dependencies": {
     "bootstrap": "5.3.2",
+    "bootstrap-icons": "1.11.1",
     "htmx.org": "1.9.7"
   }
 }
